# simpletest

./: .clang-format  CMakeLists.txt  simpletest.h  test.c  test_demo.c
